# kryoset

./: .gitignore  LICENSE  PERMISSION.md  README.md  pyproject.toml  test_format_bytes.py  test_permissions.py
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md
kryoset/: __init__.py  cli.py
kryoset/api/: _runner.py  app.py  auth.py  dependencies.py  tls.py
kryoset/api/routes/: auth.py  files.py  logs.py  permissions.py  shares.py  storage.py  users.py  web.py
kryoset/core/: __init__.py  audit_logger.py  configuration.py  control_channel.py  home_paths.py  permission_store.py  permissions.py  quota.py  sftp_server.py  storage_manager.py  timezone.py  totp.py  user_manager.py
kryoset/tests/: __init__.py  conftest.py  test_audit_logger.py  test_cli_quota.py  test_cli_storage.py  test_configuration.py  test_control_channel.py  test_permission_store.py  test_permissions.py  test_quota.py  test_sftp_server.py  test_storage_manager.py  test_timezone.py  test_totp.py  test_user_manager.py
kryoset/tests/api/: conftest.py  test_auth.py  test_files.py  test_logs.py  test_permissions.py  test_shares.py  test_tls.py  test_users.py
kryoset/web/static/: app.html  share.html
