[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryoset"
version = "0.1.0"
description = "A secure self-hosted NAS server over SFTP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.4.0",
    "bcrypt>=4.1.0",
    "click>=8.1.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.0.0",
]

[project.scripts]
kryoset = "kryoset.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["kryoset/tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["kryoset*"]
